[package]
name = "ws2812-spi"
version = "0.3.0"
authors = ["David Sawatzke <david-sawatzke@users.noreply.github.com>"]
edition = "2018"
categories = [
    "embedded",
    "no-std",
    "hardware-support"]
keywords = ["smart-leds", "ws2812"]
description = "SPI-based driver for ws2812 leds"
documentation = "https://docs.rs/crate/ws2812-spi"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/smart-leds-rs/ws2812-spi-rs"

[dependencies]
nb = "0.1.1"
smart-leds-trait = "0.2"
embedded-hal = "0.2.1"

[features]
mosi_idle_high = []
