[package]
name = "ws2812-spi"
version = "0.5.0"
authors = ["David Sawatzke <david-sawatzke@users.noreply.github.com>"]
edition = "2021"
categories = [
    "embedded",
    "no-std",
    "hardware-support"]
keywords = ["smart-leds", "ws2812"]
description = "SPI-based driver for ws2812 leds"
documentation = "https://docs.rs/crate/ws2812-spi"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/smart-leds-rs/ws2812-spi-rs"

[dependencies]
smart-leds-trait = "0.3.0"
embedded-hal = "1.0.0"

[features]
mosi_idle_high = []
std = []
